--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,6 +13,9 @@
                     <input class="form-control" type="text" name="image" placeholder="image">
                 </div>
                 <div class="form-group">
+                    <input class="form-control" type="text" name="description" placeholder="description">
+                </div>
+                <div class="form-group">
                     <button class="	btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>
             </form>
@@ -20,6 +23,5 @@
         </div>        
     </div>
 </div>
-
 
 <% include partials/footer %>
