--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,17 +1,14 @@
 <% include partials/header %>
 
-<!-- <div class="container">
+<div class="container">
     <header class="jumbotron">
         <div class="container">
-            <h1>Welcome to YelpCamp</h1>
-            <p>Find the best camping sites all over the world</p>
-            <p>
-                <a  href="/campground" class="btn btn-lg btn-primary">Campgrounds</a>
-            </p>
+            <h1><%=campground.name%></h1>
+            <p><%=campground.description%></p>            
         </div>
     </header>
-</div> -->
-
-<h1>This is the show template</h1>
-
+    <p>
+        <img src="<%=campground.image%>" alt="">
+    </p>
+</div>
 <% include partials/footer %>
