--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/main.css">
-    <!--script src="main.js"></script -->
 </head>
 
 <body>
@@ -19,9 +18,15 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-right navbar-nav">
-                    <li><a href="/">Login</a></li>
-                    <li><a href="/">Sign Up</a></li>
-                    <li><a href="/">Logout</a></li>
+                    <% if(!currentUser){ %>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/register">Sign Up</a></li>
+                        <% } else { %>
+                            <li><a href="#"><strong>
+                                <%= currentUser.username %></strong>
+                            </a></li>
+                            <li><a href="/logout">Logout</a></li>
+                            <% } %>
                 </ul>
             </div>
         </div>
