--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -23,6 +23,9 @@
                         <p>
                             <%=campground.description%>
                         </p>
+                        <p>
+                            <em>Submitted by <%= campground.author.username %></em>
+                        </p>
                     </div>
                 </div>
                 <div class="well">
@@ -33,7 +36,7 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-12">
-                                <strong><%= comment.author %></strong>
+                                <strong><%= comment.author.username %></strong>
                                 <span class="pull-right">10 day ago</span>
                                 <p>
                                     <%- comment.text%>
