--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -12,7 +12,7 @@
             </div>
             <div class="col-md-9">
                 <div class="thumbnail">
-                    <img class="image-responsive" src="<%=campground.image%>">
+                    <img class="image-responsive" src="<%= campground.image%>">
                     <div class="caption-full">
                         <h4 class="pull-right">$9.00/night</h4>
                         <h4>
@@ -26,6 +26,10 @@
                         <p>
                             <em>Submitted by <%= campground.author.username %></em>
                         </p>
+                        <a class="btn btn-xs btn-warning" href="/campground/<%= campground._id %>/edit">Edit</a>
+                        <form id="delete-form" action="/campground/<%= campground._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
+                        </form>
                     </div>
                 </div>
                 <div class="well">
