auth for comments completed

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,12 +4,13 @@
 
 .thumbnail {
     padding: 0;
+    height: 100%;
 }
 
 .thumbnail .caption-full {
     padding: 9px;
 }
 
-#delete-form {
+.delete-form {
     display: inline;
 }
