--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -28,7 +28,7 @@
                         </p>
                         <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
                             <a class="btn btn-xs btn-warning" href="/campground/<%= campground._id %>/edit">Edit</a>
-                            <form id="delete-form" action="/campground/<%= campground._id %>?_method=DELETE" method="POST">
+                            <form class="delete-form" action="/campground/<%= campground._id %>?_method=DELETE" method="POST">
                                 <button class="btn btn-xs btn-danger">Delete</button>
                             </form>
                             <% } %>
@@ -47,6 +47,12 @@
                                 <p>
                                     <%- comment.text%>
                                 </p>
+                                <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
+                                    <a class="btn btn-xs btn-warning" href="/campground/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                                    <form class="delete-form" action="/campground/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                                        <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                                    </form>
+                                    <% } %>
                             </div>
                         </div>
                         <% }) %>
